syntax = "proto3";

//package github.com.mnepesov.profiles.api.proto.profiles;

option go_package = "api/proto/profiles";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

service Profiles {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetList(GetListRequest) returns (GetListResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
  string username = 1 [(validate.rules).string.min_len = 3];
  string email = 2 [(validate.rules).string.email = true];
  string password = 3 [(validate.rules).string.min_len = 3];
  bool is_admin = 4;
}

message CreateResponse {
  Profile profile = 1;
}

message GetRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message GetResponse {
  Profile profile = 1;
}

message UpdateRequest {
  string id = 1 [(validate.rules).string.uuid = true];
  message UpdateInput {
    string username = 1 [(validate.rules).string.min_len = 3];
    string email = 2 [(validate.rules).string.email = true];
    string password = 3 [(validate.rules).string.min_len = 3];
    bool is_admin = 4;
  }
  UpdateInput data = 2 [(validate.rules).message.required = true];
}

message UpdateResponse {
  Profile profile = 1;
}

message DeleteRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message DeleteResponse {
}

message GetListRequest {
}

message GetListResponse {
  repeated Profile profiles = 1;
}

message Profile {
  string id = 1;
  string username = 2;
  string email = 3;
  bool is_admin = 4;
}
